Fix scrollbar, also make it dark

--- a/hue.css
+++ b/hue.css
@@ -1,6 +1,20 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #1e1e1e; 
+}
+::-webkit-scrollbar-thumb {
+  background: #444444; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #666666; 
+}
+
 html, body {
   background-color: #1e1e1e;
   color: #dddddd;
+  overflow-y: auto;
 }
 .title {
   color: #dddddd;
